<resources>
    <string name="app_name">Hire House Cleaners Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hire House Cleaners</string>
    <string name="nav_header_subtitle">android.studio@hirehousecleaners.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_customer">Manage Customer</string>
    <string name="menu_cleaners">Cleaners</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="api_key">AIzaSyCBGsKIfJT2qrmHre9yNlRxQY2zlyr_EXw</string>

    <string name="menu_exit">Exit</string>
    <string name="menu_rate">Feed back</string>
    <string name="menu_logout">LogOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>