<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hirehousecleanersapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_customer"
        android:name="com.example.hirehousecleanersapplication.ui.Customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" />
    <fragment
        android:id="@+id/nav_cleaners"
        android:name="com.example.hirehousecleanersapplication.ui.cleaners.CleanersFragment"
        android:label="@string/menu_cleaners"
        tools:layout="@layout/fragment_cleaners" />
    <fragment
        android:id="@+id/blankFragment"
        android:name="com.example.hirehousecleanersapplication.ui.backload.BlankFragment"
        android:label="blank_fragment"
        tools:layout="@layout/blank_fragment" />

</navigation>